--- a/base/templates/assets/css/templatemo-sixteen.css
+++ b/base/templates/assets/css/templatemo-sixteen.css
@@ -1057,4 +1057,17 @@ footer .inner-content p a {
 		right: 0;
 		bottom: 0;
 	}
+	
 }
+/* 
+.customButtons .helloee{
+	font-size: large;
+    color: wheat;
+    border-radius: 10px;
+    background-color: #e75555;
+} */
+
+.helloee{
+	color: blue;
+}
+
